MOSC-2688 / Organizar com os demais a API para o Mapa das OSCs
